--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -52,7 +52,7 @@ jobs:
     #   matrix:
     #     configuration: [Debug, Release]
 
-    runs-on: windows-latest  # For a list of available runner types, refer to
+    runs-on: linux  # For a list of available runner types, refer to
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
 
     env:
@@ -67,7 +67,7 @@ jobs:
       - name: Create a folder
         run: mkdir ashok-app
       - name: Create a file
-        run: copy NUL my-file.txt
+        run: touch my-file.txt
       - name: List all files and folders
         run: ls
     # steps:
