--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -46,7 +46,7 @@ on:
 
 jobs:
 
-  build:
+  file-operations:
 
     # strategy:
     #   matrix:
@@ -54,29 +54,32 @@ jobs:
 
     runs-on: ubuntu-latest  # For a list of available runner types, refer to
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
-
     env:
-      Solution_Name: your-solution-name                         # Replace with your solution name, i.e. MyWpfApp.sln.
-      Test_Project_Path: your-test-project-path                 # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
-      Wap_Project_Directory: your-wap-project-directory-name    # Replace with the Wap project directory relative to the solution, i.e. MyWpfApp.Package.
-      Wap_Project_Path: your-wap-project-path                   # Replace with the path to your Wap project, i.e. MyWpf.App.Package\MyWpfApp.Package.wapproj.
+      File_Name: Ashok-File
+      Folder_Name: Ashok-Folder                  # Replace with the path to your Wap project, i.e. MyWpf.App.Package\MyWpfApp.Package.wapproj.
 
     steps:
       - name: List all files and folders
         run: ls
       - name: Create a folder 2
-        run: mkdir ashok-app-1
+        run: mkdir ${{env.Folder_Name}}
       - name: Create a folder 2
         run: mkdir ashok-app-2
       - name: Create a file
-        run: touch my-file.txt
+        run: touch ${{env.File_Name}}.txt
       - name: List all files and folders
         run: ls
-    # steps:
-    # - name: Checkout
-    #   uses: actions/checkout@v4
-    #   with:
-    #     fetch-depth: 0
+  
+  build:
+
+    runs-on: windows-latest
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+
+    - name: List all files
+      run: ls
 
     # # Install the .NET Core workload
     # - name: Install .NET Core
