--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -91,6 +91,13 @@ jobs:
     - name: Build the app
       run: |
           ls
+          cd ./AspNetCoreWebAPI8/AspNetCoreWebAPI8/
+          echo "Dotnet restore started"
+          dotnet restore
+          dotnet publish ./AspNetCoreWebAPI8.csproj --no-restore -o Dotnet-TargetApp /p:ASPNETCORE_ENVIRONMENT=Development
+          echo "Dotnet restore compleated"
+          ls
+
 
     # # Restore the application to populate the obj folder with RuntimeIdentifiers
     # - name: Restore the application
