--- a/AspNetCoreWebAPI8/appsettings.json
+++ b/AspNetCoreWebAPI8/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MovieContext": "Server=LAPTOP-122RVM62\\SQLEXPRESS;Database=MovieContext;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
-  }
+  },
+  "MyConfig": "production"
 }
