--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -58,11 +58,7 @@ jobs:
           echo "Dotnet restore compleated"
           ls
       
-    - name: Run dotnet app
-      run: |
-          cd ./AspNetCoreWebAPI8/
-          dotnet run -c development --project ./AspNetCoreWebAPI8.csproj
-          echo "_______________________________________________________________________"
-          curl http://localhost:5091/api/WeatherForecast/GetWeatherForecast
-          echo "_______________________________________________________________________"
-          
+    # - name: Run dotnet app
+    #   run: |
+    #       cd ./AspNetCoreWebAPI8/
+    #       dotnet run -c development --project ./AspNetCoreWebAPI8.csproj
